Added entry for create
No docs exist, pulled from comments in #2074

--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,13 @@ _.functions(_);
 _.extend({name: 'moe'}, {age: 50});
 =&gt; {name: 'moe', age: 50}
 </pre>
-
+      <p id="create">
+        <b class="header">create</b><code>_.create(object, *properties)</code>
+        <br />
+        Creates an object that inherits from the given prototype object. If additional
+        properties are provided then they will be added to the created object.
+      </p>
+      
       <p id="extendOwn">
         <b class="header">extendOwn</b><code>_.extendOwn(destination, *sources)</code>
         <span class="alias">Alias: <b>assign</b></span>
